--- a/styles/consoligrid.css
+++ b/styles/consoligrid.css
@@ -1,6 +1,33 @@
-/***********************************************
- * Design-Specific Avenir Fonts
- ***********************************************/
+/*****************************************************
+ *  ██████╗ ██████╗ ██╗      ██████╗ ██████╗ ███████╗
+ *  ██╔════╝██╔═══██╗██║     ██╔═══██╗██╔══██╗██╔════╝
+ *  ██║     ██║   ██║██║     ██║   ██║██████╔╝███████╗
+ *  ██║     ██║   ██║██║     ██║   ██║██╔══██╗╚════██║
+ * ╚██████╗╚██████╔╝███████╗╚██████╔╝██║  ██║███████║
+ *****************************************************/
+
+:root {
+    --white: #fff;
+    --black: #000;
+    --light-blue: #008fd9;
+    --baby-blue: #f2f9fd;
+    --primary-grey: #ccc;
+    --secondary-grey: #001b2d;
+    --coastal--llc-green-background: #effcf2;
+    --coastal-llc-green-foreground: #26a71a;
+    --coastal-blue-background: #e5f4fb;
+    --coastal-blue-foreground: #008fd9;
+}
+
+
+/*************************************************
+ * ███████╗ ██████╗ ███╗   ██╗████████╗███████╗
+ * ██╔════╝██╔═══██╗████╗  ██║╚══██╔══╝██╔════╝
+ * █████╗  ██║   ██║██╔██╗ ██║   ██║   ███████╗
+ * ██╔══╝  ██║   ██║██║╚██╗██║   ██║   ╚════██║
+ * ██║     ╚██████╔╝██║ ╚████║   ██║   ███████║
+ * ╚═╝      ╚═════╝ ╚═╝  ╚═══╝   ╚═╝   ╚══════╝
+*************************************************/
 
 @font-face {
     font-family: 'Avenir-Light';
@@ -64,14 +91,6 @@
     font-weight: normal;
     font-style: normal;
 }
-
-
-/*.montserrat-bold {*/
-/*                 font-family: "Montserrat", sans-serif;*/
-/*                 font-optical-sizing: auto;*/
-/*                 font-weight: 500;*/
-/*                 font-style: normal;*/
-/*             }*/
 
 
 /***********************************************
