--- a/styles/consoligrid.css
+++ b/styles/consoligrid.css
@@ -14,7 +14,7 @@
     --primary-grey: #ccc;
     --secondary-grey: #001b2d;
     --coastal--llc-green-background: #effcf2;
-    --coastal-llc-green-foreground: #26a71a;
+    --coastal-llc-green-text: #26a71a;
     --coastal-blue-background: #e5f4fb;
     --coastal-blue-foreground: #008fd9;
 }
@@ -148,10 +148,20 @@
 
 /** Slider **/
 
-.slider {
+.slider-container {
     width: 100%;
     height: 500px;
+}
+
+.slider-item {
     background-image: url('../img/banner.png');
+    height: 100%;
+}
+
+.slider-link-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .slider-heading {
@@ -178,6 +188,51 @@
     text-align: center;
 }
 
+/** Billing Section **/
+
+.billing-container {
+    padding: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 130px;
+}
+
+.online-bill-pay-munibilling h1 {
+    font-family: 'Avenir-Regular', sans-serif;
+}
+
+.online-bill-pay-munibilling p {
+    font-family: 'Avenir-Roman', sans-serif;
+    font-size: 16px;
+}
+
+.cu-logo-phone {
+    width: 500px;
+}
+
+/** Main Section */
+
+.home-page-main-container {
+    background-color: var(--baby-blue);
+    padding: 80px 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.home-page-main-container h1 {
+    font-family: 'Avenir', sans-serif;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.home-page-main-container p {
+    font-family: 'Avenir-Roman', sans-serif;
+    text-align: center;
+    line-height: 1.88;
+}
+
 /** Components **/
 
 .btn-blue {
@@ -189,5 +244,11 @@
     color: #fff;
     text-decoration: none;
     font-family: 'Avenir-Regular', sans-serif;
+}
+
+/** Utils **/
+
+.margin-bottom-30-px {
+    margin-bottom: 30px;
 }
 
