--- a/styles/consoligrid.css
+++ b/styles/consoligrid.css
@@ -157,13 +157,12 @@
 
 .slider {
     display: flex;
-    width: 200%;
     height: 100%;
     transition: transform 0.6s ease-in-out;
 }
 
 .slider-item {
-    min-width: 50%;
+    flex: 0 0 100%;
     height: 100%;
     background-image: url('../img/banner.png');
     background-size: cover;
